// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaxInput Max Input Component with Initial Value 1`] = `
<DocumentFragment>
  <div
    class="sc-bgqQcB iFQfPY"
  >
    <input
      class="sc-ewnqHT jwbTWF"
      max="10"
      min="0"
      placeholder="Enter Amount"
      step="0.1"
      type="number"
      value="5"
    />
    <button
      class="sc-gTRrQi jDacYj"
    >
      Max
    </button>
  </div>
</DocumentFragment>
`;

exports[`MaxInput Max Input Component without Initial Value 1`] = `
<DocumentFragment>
  <div
    class="sc-bgqQcB iFQfPY"
  >
    <input
      class="sc-ewnqHT jwbTWF"
      max="10"
      min="0"
      placeholder="Enter Amount"
      step="0.1"
      type="number"
      value=""
    />
    <button
      class="sc-gTRrQi jDacYj"
    >
      Max
    </button>
  </div>
</DocumentFragment>
`;
